--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 </div>
                 <div class="modal-body">
                     <strong>Caption:</strong>
-                    <textarea class="form-control" id="caption" aria-label="With textarea">Add the caption of your post here</textarea>
+                    <textarea class="form-control" id="caption" placeholder="Add the caption of your post here"></textarea>
                     <i class="fa-solid fa-camera"></i>  <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success">Save changes</button>
+                    <button type="button" class="btn btn-success">Publish</button>
                 </div>
             </div>
         </div>
