--- a/index.html
+++ b/index.html
@@ -18,24 +18,29 @@
                     Create a new post
                 </button>
             </div>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-gear"></i>
-                </a>
-                <ul class="dropdown-menu">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa-solid fa-gear"></i>
+                    </button>
+                <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><a class="dropdown-item" href="#">Accessibility</a></li>
                     <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="text-danger" href="#">Log out</a></li>
+                    <li><a class="text-danger dropdown-item" href="#">Log out</a></li>
                 </ul>
-            </li>
+                </div>
         </div>
     </nav>
 
-    <div class="d-flex justify-content-center my-4">
-        <i class="fa-solid fa-table-cells"></i>
-        <a href="second.html"><i class="fa-solid fa-square"></i></a>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-outline-primary"><i class="fa-solid fa-table-cells"></i></button>
+        
+        <a href="second.html">
+            <button class="btn btn-outline-primary">
+                <i class="fa-solid fa-square"></i>
+            </button>
+        </a>
     </div>
 
     <div class="container-fluid">
